--- a/header/header.html
+++ b/header/header.html
@@ -23,7 +23,7 @@
             <li>Préparation
                 <ul class="submenu">
                     <li><a href="kickoff.html">Kick off</a></li>
-                    <li><a href="personnel.html">Personnel</a></li>
+                    <li><a href="personnelle.html">Personnel</a></li>
                 </ul>
             </li>
             <li>Jours d'exercice
