--- a/header/header.html
+++ b/header/header.html
@@ -16,14 +16,14 @@
         <ul>
             <li>Présentation
                 <ul class="submenu">
-                    <li><a href="event.html">L'évènement en bref</a></li>
-                    <li><a href="scenario.html">Scénario</a></li>
+                    <li><a href="../presentation/event.html">L'évènement en bref</a></li>
+                    <li><a href="../presentation/scenario.html">Scénario</a></li>
                 </ul>
             </li>
             <li>Préparation
                 <ul class="submenu">
-                    <li><a href="kickoff.html">Kick off</a></li>
-                    <li><a href="personnelle.html">Personnel</a></li>
+                    <li><a href="../preparation/kickoff.html">Kick off</a></li>
+                    <li><a href="../preparation/personnelle.html">Personnel</a></li>
                 </ul>
             </li>
             <li>Jours d'exercice
