Ajout d'index.html et LIO part

--- a/header/header.html
+++ b/header/header.html
@@ -29,8 +29,8 @@
             <li>Jours d'exercice
                 <ul class="submenu">
                     <li><a href="defense.html">Défense - LID</a></li>
-                    <li><a href="attaque.html">Attaque - LIO</a></li>
-                    <li><a href="l2I.html">Lutte d'Influence - L2I</a></li>
+                    <li><a href="../jour_exer/LIO.html">Attaque - LIO</a></li>
+                    <li><a href="../jour_exer/L2I.html">Lutte d'Influence - L2I</a></li>
                 </ul>
             </li>
             <li>Impact du projet
