--- a/header/header.html
+++ b/header/header.html
@@ -28,7 +28,7 @@
             </li>
             <li>Jours d'exercice
                 <ul class="submenu">
-                    <li><a href="defense.html">Défense - LID</a></li>
+                    <li><a href="../jour_exer/LID.html">Défense - LID</a></li>
                     <li><a href="../jour_exer/LIO.html">Attaque - LIO</a></li>
                     <li><a href="../jour_exer/L2I.html">Lutte d'Influence - L2I</a></li>
                 </ul>
