--- a/jour_exer/LID.html
+++ b/jour_exer/LID.html
@@ -13,7 +13,7 @@
 
         <section>
             <h3>🛡️ - Positionnement et organisation</h3>
-            <p>Le <b>positionnement dans la tente</b> était primordial, la défense devant absolument être sur un switch permettant de donner des adresse IP appartenant a notre réseau pour le cartographié.</p>
+            <p>Le <b>positionnement dans la tente</b> était primordial, la défense devant absolument être sur un switch permettant de donner des adresses IP appartenant à notre réseau pour le cartographier.</p>
             <img src="../images/LIO-tente.png" alt="Photo tente" class="LIO-image">
             <p>Les deux premières tables sont pour <b>l'Attaque</b>, les deux suivantes sont pour la <b>Défense</b> et une au fond pour <b>l'Influence</b>.</p>
             <p>Une table derrière le photographe est réservée pour les <b>capitaines et lieutenants</b>.</p>
@@ -21,25 +21,24 @@
 
         <section>
             <h3>0 - Communication et stratégie</h3>
-            <p>Une coordination stricte était nécessaire. Les capitaines validaient chaque action et s'assuraient de l'avancement de la cartographie et de savoir quels infrastructure on pouvait proteger. Nous utilisions  un canal <b>Discord</b> pour synchroniser les infrastructures trouvées et un tableau Excel pour repertorié toutes les adresses IP scannée et les serveurs, application ou pare-feu present dessus.</p>
+            <p>Une coordination stricte était nécessaire. Les capitaines validaient chaque action et s'assuraient de l'avancement de la cartographie et de savoir quelles infrastructures on pouvait protéger. Nous utilisions un canal <b>Discord</b> pour synchroniser les infrastructures trouvées et un tableau Excel pour répertorier toutes les adresses IP scannées et les serveurs, applications ou pare-feu présents dessus.</p>
             <img src="../images/LID-Cartographie.png" alt="Exemple cartographie" class="LID-image">
         </section>
 
         <section>
             <h3>Ⅰ - Cartographie du réseau</h3>
-            <p>Nous avons utilisé les commandes <b>nmap</b> et <b>masscan</b> pour analyser nos infrastructure et trouver toutes les informations suceptible d'être vulnérable.</p>
+            <p>Nous avons utilisé les commandes <b>nmap</b> et <b>masscan</b> pour analyser nos infrastructures et trouver toutes les informations susceptibles d'être vulnérables.</p>
             <img src="../images/LOGO_Nmap.jpg" alt="Logo nmap" class="LIO-image">
-            <p>Chaque adresse IP a été documenté, chaque interface trouvée a été associé a chaque adresse IP et chaque port du switch, qui repartissait les adresses IP de notre reseau sur chaque ordinateur, a été associé a chaque IP</p>
+            <p>Chaque adresse IP a été documentée, chaque interface trouvée a été associée à chaque adresse IP et chaque port du switch, qui répartissait les adresses IP de notre réseau sur chaque ordinateur, a été associé à chaque IP.</p>
             <img src="../images/LID-Infra.png" alt="Exemple cartographie" class="LID-image">
         </section>
 
-
         <section>
-            <h3>ⅠⅠ - Surveillance du réseau</h3>
+            <h3>Ⅱ - Surveillance du réseau</h3>
             <p>Nous avons utilisé <b>Wireshark</b> pour analyser le trafic réseau et détecter les attaques adverses.</p>
             <img src="../images/LOGO_Wireshark.png" alt="Logo Wireshark" class="LID-image">
-            <p>Chaque alerte repérer était communiqué pour que nous puissions mettre en place les règles de filtrage et aunsi bloquer les intrusions.</p>
-            <p>Grâce à ces mise en place, nous avons pu repousser plusieurs tentatives d'intrusion.</p>
+            <p>Chaque alerte repérée était communiquée pour que nous puissions mettre en place les règles de filtrage et ainsi bloquer les intrusions.</p>
+            <p>Grâce à ces mises en place, nous avons pu repousser plusieurs tentatives d'intrusion.</p>
         </section>
 
         <section>
@@ -50,9 +49,9 @@
         </section>
 
         <section>
-            <h3>Ⅳ - Evolution de la défense</h3>
-            <p>Vers le milieu de l'exercice, il nous a été fournis un GIC (Groupement d'Intervention Cyber) contenant des outils qui nous permettait de deployer des agents sur nos serveurs, nos machines et qui centralisait les logs, les pare-feu et nous permmettait une bien meilleur protection contre les attaques.</p>
-            <img src="../images/LID-SOC.png" alt="SOC inclue dans le GIC" class="LID-image">
+            <h3>Ⅳ - Évolution de la défense</h3>
+            <p>Vers le milieu de l'exercice, il nous a été fourni un GIC (Groupement d'Intervention Cyber) contenant des outils qui nous permettaient de déployer des agents sur nos serveurs, nos machines, qui centralisaient les logs, les pare-feu, et nous permettaient une bien meilleure protection contre les attaques.</p>
+            <img src="../images/LID-SOC.png" alt="SOC inclus dans le GIC" class="LID-image">
         </section>
 
         <footer>
