Ajout de la page Remise des prix

--- a/header/header.html
+++ b/header/header.html
@@ -40,8 +40,8 @@
             </li>
             <li>Clôture du CHE
                 <ul class="submenu">
-                    <li><a href="retex.html">Retex</a></li>
-                    <li><a href="remise-prix.html">Remise des prix</a></li>
+                    <li><a href="../cloture_che/retex.html">Retex</a></li>
+                    <li><a href="../cloture_che/remise-prix.html">Remise des prix</a></li>
                 </ul>
             </li>
         </ul>
