Correction de fautes d'orthographe

--- a/cloture_che/remise-prix.html
+++ b/cloture_che/remise-prix.html
@@ -40,7 +40,7 @@
 
         <section>
             <h3>🥇 Les vainqueurs</h3>
-            <p>Malgré nos deux victoires, c'est l'équipe <b>Cryptanga</b> qui a été sacrée <b>vainqueur globale</b> du Cyber Humanum Est 2025.</p>
+            <p>Malgré nos deux victoires, c'est l'équipe <b>Cryptanga</b> qui a été sacrée <b>vainqueur global</b> du Cyber Humanum Est 2025.</p>
             <p>Une légère déception pour nous, mais vite balayée par la fierté d’avoir participé à un événement aussi exceptionnel.</p>
         </section>
 
