--- a/cloture_che/retex.html
+++ b/cloture_che/retex.html
@@ -23,7 +23,7 @@
             <p>Cette session de retour d'expérience a été l'occasion pour chacun de partager ses impressions et les enseignements tirés de l'exercice.</p>
             
             <h4>🛡️ Témoignages des équipes</h4>
-            <p>Les trois équipes engagées dans l'événement – <b>Anumérique, APT et Crypntanga</b> – ont présenté leur retour d'expérience devant l'assemblée.</p>
+            <p>Les trois équipes engagées dans l'événement – <b>Anumérique, APT et Cryptanga</b> – ont présenté leur retour d'expérience devant l'assemblée.</p>
             <p>Chaque équipe a exposé ses réussites, mais aussi les difficultés rencontrées au cours de l'exercice.</p>
         
             <h4>🎙️ Intervention des organisateurs</h4>
