--- a/impact_projet/impact.html
+++ b/impact_projet/impact.html
@@ -12,7 +12,7 @@
         <div id="header-container"></div>
 
         <section>
-            <h3>🚀 Ce que nous avons retiré du Cyber Humanum Est 2025</h3>
+            <h3>🚀 Ce que nous avons tiré du Cyber Humanum Est 2025</h3>
             <p>Cette aventure a été bien plus qu'un simple exercice. Elle nous a permis d'acquérir des compétences précieuses, de nous confronter à des conditions réelles et de vivre une expérience humaine et professionnelle unique.</p>
             <img src="../images/polytech_v1.png" alt="Expérience CHE" class="experience-image">
         </section>
