--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
-        <meta http-equiv="refresh" content="0;url=preparation/kickoff.html">
+        <meta http-equiv="refresh" content="0;url=presentation/event.html">
         <link rel="stylesheet" href="">
     </head>
     <body>
