--- a/jour_exer/L2I.html
+++ b/jour_exer/L2I.html
@@ -24,10 +24,10 @@
     </section>
     <section>
         <h3>🏆 - Le prix!</h3>
-        <p>Cette année, Anuméric a reçu le prix de la meilleure L2I!</p>
+        <p>Cette année, Anumérique a reçu le prix de la meilleure L2I!</p>
         <img src="../images/L2I-prix.gif" alt="prix L2I" class="L2I-image">
         <p>Meme si nous n'avons que très peu participé à la partie L2I de notre équipe, nous avons bien vu leur <b>Influence</b> et leur <b>Talent</b></p>
-        <img src="../images/L2I-drapeau.gif" alt="drapeau Anumeric" class="L2I-image">
+        <img src="../images/L2I-drapeau.gif" alt="drapeau Anumérique" class="L2I-image">
     </section>
     <script>
         fetch('../header/header.html')
