--- a/preparation/kickoff.html
+++ b/preparation/kickoff.html
@@ -22,7 +22,7 @@
         <p>La journée a commencé avec une <b>présentation en amphithéâtre</b> où :</p>
         <ul>
             <li>📌 Le projet Cyber Humanum Est a été expliqué en détail.</li>
-            <li>📌 Le scénario <b>Riverchelles - Anuméric - Cryptanga</b> a été dévoilé.</li>
+            <li>📌 Le scénario <b>Riverchelles - Anumérique - Cryptanga</b> a été dévoilé.</li>
             <li>📌 Les objectifs et enjeux stratégiques ont été mis en avant.</li>
         </ul>
         <img src="../images/kickoff.png" alt="kickoff" class="kickoff-image">
@@ -32,7 +32,7 @@
         <h3>👥 Constitution des Équipes</h3>
         <p>Après la présentation, les participants ont été répartis en <b>trois équipes</b> :</p>
         <ul>
-            <li>⚔️ <b>Équipe Anuméric</b> </li>
+            <li>⚔️ <b>Équipe Anumérique</b> </li>
             <li>⚔️ <b>Équipe Cryptanga</b> </li>
             <li>🕵️ <b>APT54 (Hackers indépendants)</b> </li>
         </ul>
